<resources>
    <string name="app_name">Калькулятор</string>
    <string name="key_9">9</string>
    <string name="num_9">9</string>
    <string name="num_8">8</string>
    <string name="num_7">7</string>
    <string name="num_0">0</string>
    <string name="num_dot">.</string>
    <string name="num_result">=</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="num_clean">c</string>
    <string name="clean">c</string>
    <string name="del">⌫</string>
    <string name="div">÷</string>
    <string name="mult">x</string>
    <string name="start_result_value">0</string>
    <string name="show_toast">show_toast</string>
    <string name="toast_fired">Toast Fired!</string>
    <string name="theme_one">Черная</string>
    <string name="theme_two">Красная</string>
    <string name="theme_three">Оранжевая</string>
    <string name="theme_choose">Выбрать тему</string>
    <string name="theme_item">Элемент списка тем</string>


</resources>