<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.MainActivity"
    android:background="@color/white"
    android:layout_column="4">

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/key_del"
        android:gravity="right"
        android:textSize="48sp"
        android:text="@string/start_result_value"
        tools:ignore="RtlHardcoded"/>
    
    <Button
        android:id="@+id/key_mult"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/mult"
        android:textSize="28sp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/key_minus"
        app:layout_constraintLeft_toRightOf="@id/key_div"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/key_div"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/div"
        android:textSize="40sp"
        android:backgroundTint="@color/blue"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/key_9"
        app:layout_constraintLeft_toRightOf="@id/key_del"
        app:layout_constraintRight_toLeftOf="@id/key_mult"/>

    <Button
        android:id="@+id/key_del"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/del"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintLeft_toRightOf="@id/key_clean"
        app:layout_constraintRight_toLeftOf="@id/key_div"/>

    <Button
        android:id="@+id/key_clean"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/clean"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/key_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_del"/>

    <Button
        android:id="@+id/key_minus"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/minus"
        android:textSize="28sp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/key_plus"
        app:layout_constraintLeft_toRightOf="@id/key_9"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/key_9"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_9"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintLeft_toRightOf="@id/key_8"
        app:layout_constraintRight_toLeftOf="@id/key_minus"/>

    <Button
        android:id="@+id/key_8"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_8"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintLeft_toRightOf="@id/key_7"
        app:layout_constraintRight_toLeftOf="@id/key_9"/>

    <Button
        android:id="@+id/key_7"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_7"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_8"/>

    <Button
        android:id="@+id/key_plus"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/plus"
        android:textSize="28sp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/key_result"
        app:layout_constraintLeft_toRightOf="@id/key_6"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/key_6"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_6"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_3"
        app:layout_constraintLeft_toRightOf="@id/key_5"
        app:layout_constraintRight_toLeftOf="@id/key_plus"/>

    <Button
        android:id="@+id/key_5"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_5"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_2"
        app:layout_constraintLeft_toRightOf="@id/key_4"
        app:layout_constraintRight_toLeftOf="@id/key_6"/>

    <Button
        android:id="@+id/key_4"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_4"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_5"/>

    <Button
        android:id="@+id/key_3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_3"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_dot"
        app:layout_constraintLeft_toRightOf="@id/key_2"
        app:layout_constraintRight_toLeftOf="@id/key_result"/>

    <Button
        android:id="@+id/key_2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_2"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintLeft_toRightOf="@id/key_1"
        app:layout_constraintRight_toLeftOf="@id/key_3"/>

    <Button
        android:id="@+id/key_1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_1"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_2"/>

    <Button
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_0"
        android:textSize="28sp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/key_2"/>

    <Button
        android:id="@+id/key_dot"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/num_dot"
        android:textSize="28sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/key_0"
        app:layout_constraintRight_toLeftOf="@id/key_result"/>

    <Button
        android:id="@+id/key_result"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:text="@string/num_result"
        android:textSize="28sp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/key_dot"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>